# REUSE

./: .gitignore  .gitmodules  AbstractKmerContainer.h  BBHashKmerContainer.cpp  BBHashKmerContainer.h  CMakeLists.txt  KmerIterator.cpp  KmerIterator.h  README.md  SharedQueue.cpp  SharedQueue.h  ThreadQueue.cpp  ThreadQueue.h  bindopt.h  build.cpp  cmdline.cpp  cmdline.h  common.cpp  common.h  fastaRecord.cpp  fastaRecord.h  fastqRecord.cpp  fastqRecord.h  filter.cpp  kmers.cpp  kmers.h  main.cpp  read_file.cpp  reuse  thread_util.cpp  thread_util.h
data/: chrT.fa
